--- a/src/app/game/game.component.html
+++ b/src/app/game/game.component.html
@@ -7,12 +7,13 @@
     <tbody>
         <tr *ngFor="let row of metrixObj; let i=index;">
             <td *ngFor="let col of row; let j=index;">
-                <span *ngIf="col">
-                    {{col}}
-                </span>
-                <span *ngIf="!col">
-                    -
-                </span>
+                
+                <div style="width: 20px; height: 20px; overflow:hidden; text-align: center;" *ngIf="col">
+                    <img [src]="'../../assets/'+col" width="15px" height="15px">
+                </div>
+                <div style="width: 20px; height: 20px; overflow:hidden; text-align: center;" *ngIf="!col">
+                    
+                </div>
             </td>
         </tr>
     </tbody>
